--- a/project1.lpi
+++ b/project1.lpi
@@ -7,7 +7,7 @@
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -31,16 +31,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="10">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
-        <CursorPos X="82" Y="11"/>
+        <CursorPos X="8" Y="12"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="24"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -49,10 +47,10 @@
         <ResourceBaseClass Value="Form"/>
         <ResourceFilename Value="unit1.lrs"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="14" Y="49"/>
+        <CursorPos X="1" Y="39"/>
         <TopLine Value="30"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -61,18 +59,18 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="1" Y="23"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="24"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="point3d_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="point3d_unit"/>
-        <CursorPos X="9" Y="87"/>
-        <TopLine Value="61"/>
-        <EditorIndex Value="6"/>
-        <UsageCount Value="24"/>
+        <CursorPos X="49" Y="23"/>
+        <TopLine Value="77"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
@@ -85,10 +83,10 @@
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="5" Y="24"/>
+        <CursorPos X="9" Y="24"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="24"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
@@ -101,75 +99,81 @@
         <Filename Value="../../../usr/lib/lazarus/lcl/include/buttoncontrol.inc"/>
         <CursorPos X="1" Y="45"/>
         <TopLine Value="30"/>
-        <EditorIndex Value="2"/>
         <UsageCount Value="11"/>
-        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="../../../usr/share/fpcsrc/2.2.2/rtl/inc/mathh.inc"/>
         <CursorPos X="14" Y="71"/>
         <TopLine Value="56"/>
-        <EditorIndex Value="1"/>
         <UsageCount Value="11"/>
-        <Loaded Value="True"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="rigidgroup_unit"/>
+        <CursorPos X="88" Y="59"/>
+        <TopLine Value="34"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="23"/>
+        <Loaded Value="True"/>
+      </Unit9>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="58" Column="12" TopLine="35"/>
+        <Caret Line="48" Column="20" TopLine="28"/>
       </Position1>
       <Position2>
-        <Filename Value="../../../usr/lib/lazarus/lcl/include/buttoncontrol.inc"/>
-        <Caret Line="45" Column="1" TopLine="30"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="54" Column="21" TopLine="28"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="60" Column="1" TopLine="35"/>
+        <Caret Line="56" Column="5" TopLine="33"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="58" Column="14" TopLine="36"/>
+        <Caret Line="53" Column="101" TopLine="34"/>
       </Position4>
       <Position5>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="80" Column="36" TopLine="58"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="56" Column="29" TopLine="35"/>
       </Position5>
       <Position6>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="70" Column="41" TopLine="40"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="47" Column="33" TopLine="35"/>
       </Position6>
       <Position7>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="23" Column="15" TopLine="20"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="55" Column="21" TopLine="35"/>
       </Position7>
       <Position8>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="50" Column="63" TopLine="23"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="67" Column="1" TopLine="52"/>
       </Position8>
       <Position9>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="48" Column="20" TopLine="28"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="29" Column="14" TopLine="7"/>
       </Position9>
       <Position10>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="54" Column="21" TopLine="28"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="67" Column="14" TopLine="53"/>
       </Position10>
       <Position11>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="56" Column="5" TopLine="33"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="68" Column="17" TopLine="53"/>
       </Position11>
       <Position12>
         <Filename Value="unit1.pas"/>
-        <Caret Line="53" Column="101" TopLine="34"/>
+        <Caret Line="45" Column="6" TopLine="36"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="56" Column="29" TopLine="35"/>
+        <Caret Line="43" Column="31" TopLine="36"/>
       </Position13>
       <Position14>
         <Filename Value="unit1.pas"/>
-        <Caret Line="47" Column="33" TopLine="35"/>
+        <Caret Line="47" Column="28" TopLine="35"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
@@ -177,60 +181,64 @@
       </Position15>
       <Position16>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="67" Column="1" TopLine="52"/>
+        <Caret Line="85" Column="1" TopLine="66"/>
       </Position16>
       <Position17>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="29" Column="14" TopLine="7"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="47" Column="19" TopLine="36"/>
       </Position17>
       <Position18>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="67" Column="14" TopLine="53"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="55" Column="21" TopLine="36"/>
       </Position18>
       <Position19>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="68" Column="17" TopLine="53"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="53" Column="40" TopLine="36"/>
       </Position19>
       <Position20>
         <Filename Value="unit1.pas"/>
-        <Caret Line="45" Column="6" TopLine="36"/>
+        <Caret Line="58" Column="11" TopLine="36"/>
       </Position20>
       <Position21>
         <Filename Value="unit1.pas"/>
-        <Caret Line="43" Column="31" TopLine="36"/>
+        <Caret Line="16" Column="17" TopLine="16"/>
       </Position21>
       <Position22>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="47" Column="28" TopLine="35"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="96" Column="61" TopLine="68"/>
       </Position22>
       <Position23>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="55" Column="21" TopLine="35"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="21" Column="31" TopLine="6"/>
       </Position23>
       <Position24>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="85" Column="1" TopLine="66"/>
+        <Caret Line="18" Column="27" TopLine="3"/>
       </Position24>
       <Position25>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="47" Column="19" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="21" Column="48" TopLine="3"/>
       </Position25>
       <Position26>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="55" Column="21" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="94" Column="43" TopLine="72"/>
       </Position26>
       <Position27>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="53" Column="40" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="71" Column="52" TopLine="61"/>
       </Position27>
       <Position28>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="58" Column="11" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="50" Column="25" TopLine="27"/>
       </Position28>
       <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="17" TopLine="16"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="17" Column="34" TopLine="2"/>
       </Position29>
+      <Position30>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="53" Column="3" TopLine="38"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
