--- a/project1.lpi
+++ b/project1.lpi
@@ -2,12 +2,14 @@
 <CONFIG>
   <ProjectOptions>
     <PathDelim Value="/"/>
-    <Version Value="6"/>
+    <Version Value="7"/>
     <General>
+      <Flags>
+        <LRSInOutputDirectory Value="False"/>
+      </Flags>
       <MainUnit Value="0"/>
-      <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -45,10 +47,9 @@
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <ResourceFilename Value="unit1.lrs"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="69" Y="9"/>
-        <TopLine Value="1"/>
+        <CursorPos X="32" Y="140"/>
+        <TopLine Value="130"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="33"/>
         <Loaded Value="True"/>
@@ -131,123 +132,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="55" Column="21" TopLine="36"/>
+        <Caret Line="16" Column="17" TopLine="16"/>
       </Position1>
       <Position2>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="53" Column="40" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="96" Column="61" TopLine="68"/>
       </Position2>
       <Position3>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="58" Column="11" TopLine="36"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="21" Column="31" TopLine="6"/>
       </Position3>
       <Position4>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="17" TopLine="16"/>
+        <Filename Value="point3d_unit.pas"/>
+        <Caret Line="18" Column="27" TopLine="3"/>
       </Position4>
       <Position5>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="96" Column="61" TopLine="68"/>
+        <Caret Line="21" Column="48" TopLine="3"/>
       </Position5>
       <Position6>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="21" Column="31" TopLine="6"/>
+        <Caret Line="94" Column="43" TopLine="72"/>
       </Position6>
       <Position7>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="18" Column="27" TopLine="3"/>
+        <Caret Line="71" Column="52" TopLine="61"/>
       </Position7>
       <Position8>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="21" Column="48" TopLine="3"/>
+        <Caret Line="50" Column="25" TopLine="27"/>
       </Position8>
       <Position9>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="94" Column="43" TopLine="72"/>
+        <Caret Line="17" Column="34" TopLine="2"/>
       </Position9>
       <Position10>
         <Filename Value="point3d_unit.pas"/>
-        <Caret Line="71" Column="52" TopLine="61"/>
+        <Caret Line="53" Column="3" TopLine="38"/>
       </Position10>
       <Position11>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="50" Column="25" TopLine="27"/>
+        <Filename Value="atom_unit.pas"/>
+        <Caret Line="8" Column="32" TopLine="1"/>
       </Position11>
       <Position12>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="17" Column="34" TopLine="2"/>
+        <Filename Value="atom_unit.pas"/>
+        <Caret Line="29" Column="47" TopLine="1"/>
       </Position12>
       <Position13>
-        <Filename Value="point3d_unit.pas"/>
-        <Caret Line="53" Column="3" TopLine="38"/>
+        <Filename Value="atom_unit.pas"/>
+        <Caret Line="17" Column="99" TopLine="2"/>
       </Position13>
       <Position14>
         <Filename Value="atom_unit.pas"/>
-        <Caret Line="8" Column="32" TopLine="1"/>
+        <Caret Line="23" Column="94" TopLine="5"/>
       </Position14>
       <Position15>
         <Filename Value="atom_unit.pas"/>
-        <Caret Line="29" Column="47" TopLine="1"/>
+        <Caret Line="28" Column="24" TopLine="5"/>
       </Position15>
       <Position16>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="17" Column="99" TopLine="2"/>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <Caret Line="61" Column="22" TopLine="32"/>
       </Position16>
       <Position17>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="23" Column="94" TopLine="5"/>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <Caret Line="8" Column="35" TopLine="1"/>
       </Position17>
       <Position18>
-        <Filename Value="atom_unit.pas"/>
-        <Caret Line="28" Column="24" TopLine="5"/>
+        <Filename Value="rigidgroup_unit.pas"/>
+        <Caret Line="28" Column="20" TopLine="13"/>
       </Position18>
       <Position19>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="61" Column="22" TopLine="32"/>
+        <Caret Line="31" Column="22" TopLine="12"/>
       </Position19>
       <Position20>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="8" Column="35" TopLine="1"/>
+        <Caret Line="37" Column="26" TopLine="22"/>
       </Position20>
       <Position21>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="28" Column="20" TopLine="13"/>
+        <Caret Line="15" Column="25" TopLine="10"/>
       </Position21>
       <Position22>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="31" Column="22" TopLine="12"/>
+        <Caret Line="40" Column="22" TopLine="31"/>
       </Position22>
       <Position23>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="37" Column="26" TopLine="22"/>
+        <Caret Line="48" Column="85" TopLine="33"/>
       </Position23>
       <Position24>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="15" Column="25" TopLine="10"/>
+        <Caret Line="54" Column="49" TopLine="35"/>
       </Position24>
       <Position25>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="40" Column="22" TopLine="31"/>
+        <Caret Line="56" Column="30" TopLine="37"/>
       </Position25>
       <Position26>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="48" Column="85" TopLine="33"/>
+        <Caret Line="60" Column="38" TopLine="37"/>
       </Position26>
       <Position27>
         <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="54" Column="49" TopLine="35"/>
+        <Caret Line="61" Column="20" TopLine="37"/>
       </Position27>
       <Position28>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="56" Column="30" TopLine="37"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="18" Column="5" TopLine="9"/>
       </Position28>
       <Position29>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="60" Column="38" TopLine="37"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="21" Column="33" TopLine="102"/>
       </Position29>
       <Position30>
-        <Filename Value="rigidgroup_unit.pas"/>
-        <Caret Line="61" Column="20" TopLine="37"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="19" Column="13" TopLine="18"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
