--- a/project1.lpi
+++ b/project1.lpi
@@ -9,7 +9,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="2"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,14 +33,16 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="11">
+    <Units Count="12">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
         <CursorPos X="8" Y="12"/>
         <TopLine Value="1"/>
+        <EditorIndex Value="1"/>
         <UsageCount Value="33"/>
+        <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -48,8 +50,8 @@
         <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="32" Y="140"/>
-        <TopLine Value="130"/>
+        <CursorPos X="32" Y="136"/>
+        <TopLine Value="108"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="33"/>
         <Loaded Value="True"/>
@@ -60,7 +62,7 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="36" Y="15"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="5"/>
         <UsageCount Value="33"/>
         <Loaded Value="True"/>
       </Unit2>
@@ -70,7 +72,7 @@
         <UnitName Value="point3d_unit"/>
         <CursorPos X="42" Y="18"/>
         <TopLine Value="56"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="7"/>
         <UsageCount Value="33"/>
         <Loaded Value="True"/>
       </Unit3>
@@ -86,7 +88,7 @@
         <UnitName Value="region_unit"/>
         <CursorPos X="5" Y="14"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="4"/>
         <UsageCount Value="33"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -114,7 +116,7 @@
         <UnitName Value="rigidgroup_unit"/>
         <CursorPos X="142" Y="61"/>
         <TopLine Value="36"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="3"/>
         <UsageCount Value="29"/>
         <Loaded Value="True"/>
       </Unit9>
@@ -124,12 +126,22 @@
         <UnitName Value="atom_unit"/>
         <CursorPos X="92" Y="23"/>
         <TopLine Value="5"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="6"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit10>
+      <Unit11>
+        <Filename Value="sinewave_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="sineWave_unit"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="20"/>
+        <Loaded Value="True"/>
+      </Unit11>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="unit1.pas"/>
         <Caret Line="16" Column="17" TopLine="16"/>
@@ -244,12 +256,8 @@
       </Position28>
       <Position29>
         <Filename Value="unit1.pas"/>
-        <Caret Line="21" Column="33" TopLine="102"/>
-      </Position29>
-      <Position30>
-        <Filename Value="unit1.pas"/>
         <Caret Line="19" Column="13" TopLine="18"/>
-      </Position30>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
